# terminal-ai

./: .env.example  .gitignore  README.md
.github/workflows/: deploy-pages.yml  release.yml
ai-core/: Cargo.toml  test_cwd_fix.rs
ai-core/src/: codex_oauth.rs  config.rs  context.rs  history.rs  llm.rs  loading.rs  main.rs  picker.rs  prompt.rs  safety.rs  types.rs
ai-core/src/agent/: executor.rs  llm.rs  logs.rs  loop_.rs  mod.rs  types.rs  ui.rs
ai-core/tests/: cli.rs
docs/: TODO.md
install/: bash.sh  powershell.ps1  uninstall.ps1  uninstall.sh
memories/repo/: terminal-ai-core.md  terminal-ai-web.md
scripts/: merge-release.ps1  merge-release.sh  package-linux.sh  package-windows.ps1
shell/: bash.sh  fish.fish  powershell.ps1  zsh.zsh
web/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  termcn-llm.txt  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ApiSetup.tsx  CopyButton.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  InstallSection.tsx  NavBar.tsx  ShellToggle.tsx  TerminalDemo.tsx  UninstallSection.tsx
web/src/components/ui/: theme-provider.tsx
