[package]
name = "ai-core"
version = "0.1.1"
edition = "2024"
default-run = "ai-core"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
dotenvy = "0.15"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = { version = "3", features = ["termination"] }
webbrowser = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
